fix carret scroll on iphone

--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,6 @@ code {
 }
 
 .editor {
-    scroll-behavior: smooth;
-    overflow: auto;
-    height: 100vh;
     display: flex;
     flex-direction: column;
 }
